--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,23 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<%# サイドバー %>
+<%= render "sidebar" %>
+<div class="col-9">
+  <div id="main_visual" class="d-flex">
+    <div id="main_visual_text" class="m-auto border border-dark rounded">
+      <p class="m-3">
+        ようこそ、ながのCAKEへ！
+        <br>
+        このサイトは、ケーキ販売のECサイトになります。
+        <br>
+        会員でない方も商品の閲覧はできますが、
+        <br>
+        購入には会員登録が必要となります。
+      </p>
+    </div>
+  </div>
+  
+  <div id="new_items">
+    <h2>新着商品</h2>
+    <%= render "items/index" %>
+  </div>
+</div>
+  
