--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,40 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header class="d-flex justify-content-between bg-header border-bottom">
+      <div class="logo_area">
+        <div class="logo px-5 py-3 m-2 h3 border border-success">
+          <%# ↓の代わりににlogoが入る予定 %>
+          <div>ＬＯＧＯ</div>
+        </div>
+      </div>
+      <div class="button_search">
+        <div class="button_area m-2">
+          <%= link_to "About", "#", class: "btn btn-outline-dark" %>
+          <%= link_to "商品一覧", "#", class: "btn btn-outline-dark" %>
+          <%# if ログイン時のみ %>
+            <%= link_to "ジャンル一覧", "#", class: "btn btn-outline-dark" %>
+            <%= link_to "注文履歴一覧", "#", class: "btn btn-outline-dark" %>
+            <%= link_to "ログアウト", "#", class: "btn btn-outline-dark" %>
+          <%# else %>
+            <%= link_to "新規登録", "#", class: "btn btn-outline-dark" %>
+            <%= link_to "ログイン", "#", class: "btn btn-outline-dark" %>
+          <%# end %>
+        </div>
+        <div class="search_area m-2">
+          <%# ↓の代わりににsearch_boxが入る予定 %>
+          <div class="search_box border border-dark bg-light w-50 ms-auto">
+            SEARCH
+          </div>
+        </div>
+      </div>
+    </header>
+    <main class="d-flex">
+      <%= yield %>
+    </main>
+
+    <footer class="bg-header border-top p-1">
+      <p class="my-3 mx-auto w-auto text-center">footer</p>
+    </footer>
   </body>
 </html>
