--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -14,10 +14,13 @@
       </p>
     </div>
   </div>
-  
-  <div id="new_items">
+
+  <div id="new_items" class="p-3">
     <h2>新着商品</h2>
-    <%= render "items/index" %>
+    <%= render "items/index", items: @items %>
+    <p class="text-end">
+      <%= link_to "すべての商品を見る", items_path %>
+    </p>
   </div>
 </div>
-  
+
