--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
       <div class="button_search">
         <div class="button_area m-2">
           <%= link_to "About", "#", class: "btn btn-outline-dark" %>
-          <%= link_to "商品一覧", "#", class: "btn btn-outline-dark" %>
+          <%= link_to "商品一覧", items_path, class: "btn btn-outline-dark" %>
           <%# if ログイン時のみ %>
             <%= link_to "ジャンル一覧", "#", class: "btn btn-outline-dark" %>
             <%= link_to "注文履歴一覧", "#", class: "btn btn-outline-dark" %>
