Adjust item-list design

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,18 +1,17 @@
 <%= render "homes/sidebar" %>
 <div class="d-flex p-3 col-9">
 	<%#= image_tag asset_path(), class: "show_item_image" %>
-	<div class="show_item_image" style="height:400px;background-color:lightblue;"></div>
-	<div class="show_item_detail">
+	<div class="show_item_image col-5" style="height:400px;background-color:lightblue;"></div>
+	<div class="show_item_detail offset-1 col-6">
 		<h2><%= @item.name %></h2>
 		<p><%= @item.introduction %></p>
-		<p>
+		<p class="mt-3">
 			<span class="h4"><%= @item.price_taxin %></span>
 			<span>（税込）</span>
 		</p>
-		
-	<%= form_with do |f| %>
-		<%= f.select :amount, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10] %>
-		<%= f.submit "カートに入れる" %>
-	<% end %>
+		<%= form_with class: "add_to_cart mt-5 d-flex" do |f| %>
+			<%= f.select :amount, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10], {}, class: "form-select w-50 me-3" %>
+			<%= f.submit "カートに入れる", class: "btn btn-success" %>
+		<% end %>
 	</div>
 </div>
