--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -46,40 +46,47 @@
 }
 
 .item_list{
-  width: 1230px;
+  width: 100%;
   flex-wrap: wrap;
 }
 
 .item_box{
-  height: 300px;
-  width: 300px;
+  height: 250px;
+  width: 220px;
   text-align: center;
   border: 1px solid black;
   border-radius: 5px;
   text-decoration: none;
+  margin: 10px 5px 0;
+  transition: 0.4s;
+}
+
+.item_box_space{
+  height: 0;
+  width: 220px;
+  margin: 0 5px;
+  
 }
 
 .item_box img{
-  height: 240px;
+  max-height: 190px;
+  max-width: 210px;
 }
 
 .item_box_text{
   margin-top: auto;
 }
 
-.item_box:not(:nth-child(4n)){
-  margin-right: 10px;
-}
-
-.item_box:not(:nth-last-child(-n+4)){
-  margin-bottom: 10px;
-}
-
 .item_box:hover{
   background-color: #eee;
+  transition: 0.4s;
 }
 
-.show_item_image{
-  width: 35vw;
-  max-width: 500px;
+.item_box_inner{
+  height: 100%;
+  width: 100%;
+}
+
+.add_to_cart{
+  
 }
