--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -18,7 +18,7 @@
   <div id="new_items" class="p-3">
     <h2>新着商品</h2>
     <%= render "items/index", items: @items %>
-    <p class="text-end">
+    <p class="text-end mt-3">
       <%= link_to "すべての商品を見る", items_path %>
     </p>
   </div>
