--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, @item.name %>
 <%= render "homes/sidebar" %>
 <div class="d-flex p-3 col-9">
 	<%#= image_tag asset_path(), class: "show_item_image" %>
