--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -2,3 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
+.about_img{
+	background-image: url("/images/mv.jpg");
+	height:	300px;
+	width: 450px;
+	background-position: center;
+	background-size: cover;
+}
