--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WorkGithub</title>
+    <title><%= content_for?(:title) ? "#{yield(:title)} - ながのCAKE" : "ながのCAKE"%></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -22,7 +22,7 @@
       </div>
       <div class="button_search">
         <div class="button_area m-2">
-          <%= link_to "About", "#", class: "btn btn-outline-dark" %>
+          <%= link_to "About", about_path, class: "btn btn-outline-dark" %>
           <%= link_to "商品一覧", items_path, class: "btn btn-outline-dark" %>
           <%# if ログイン時のみ %>
             <%= link_to "ジャンル一覧", "#", class: "btn btn-outline-dark" %>
