--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,64 @@
-<h2>Sign up</h2>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto">
+      <h2>新規会員登録</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "public/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="field">
+          <%= f.label :名前 %>
+          <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
+          <%= f.text_field :first_name, autocomplete: "first_name" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :フリガナ %>
+          <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana" %>
+          <%= f.text_field :first_name_kana, autocomplete: "last_name_kana" %>
+        </div>
+        
+        <div class="field">
+          <%= f.label :メールアドレス %>
+          <%= f.email_field :email, autocomplete: "email" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :"郵便番号(ハイフンなし)" %>
+          <%= f.text_field :postal_code, autocomplete: "postal_code" %>
+        </div>
+  
+        <div class="field">
+          <%= f.label :住所 %>
+          <%= f.text_field :address, autocomplete: "address" %>
+        </div>
+  
+        <div class="field">
+          <%= f.label :"電話番号(ハイフンなし)" %>
+          <%= f.text_field :telephone_number, autocomplete: "telephone_number" %>
+        </div>
+  
+        <div class="field">
+          <%= f.label :パスワード %>
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %>文字以上)</em>
+          <% end %>
+          <%= f.password_field :password, autocomplete: "new-password" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :"パスワード(確認用)" %>
+          <%= f.password_field :password_confirmation %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "新規登録", class: "btn btn-success"%>
+        </div>
+      <% end %>
+
+      <h3>既に登録済みの方</h3>
+      <p><%= render "public/shared/links" %> からログインしてください</p>
+      
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "public/shared/links" %>
+</div>
