--- a/app/views/items/_index.html.erb
+++ b/app/views/items/_index.html.erb
@@ -1,13 +1,13 @@
 <div class="item_list d-flex mx-auto justify-content-center">
   <% items.each do |item| %>
-    <div class="item_box">
+    <div>
       <%= link_to item_path(item.id), class: "text-decoration-none text-dark" do %>
-        <div class="p-1 item_box_inner">
+        <div class="card item_box">
           <%#= image_tag item.get_item_image(100,100), size: "100x100" %>
           <%= image_tag asset_path("cake_sample.jpg") %>
-          <div class="item_box_text">
-            <p><%= item.name %></p>
-            <p><%= item.price_taxin %></p>
+          <div class="card-body">
+            <p class="card-title font-weight-bold"><%= item.name %></p>
+            <p class="card-text"><%= item.price_taxin %></p>
           </div>
         </div>
       <% end %>
