--- a/app/views/custmers/show.html.erb
+++ b/app/views/custmers/show.html.erb
@@ -1,6 +1,6 @@
-<div class = "container mt-3">
-  <div class = "row">
-    <div class = "col-md-7">
+<div class='container mt-3'>
+  <div class='row'>
+    <div class='col-md-7'>
       <h2>マイページ</h2>
       <h3>登録情報</h3>
       <div class = "col-md-2">
@@ -9,25 +9,25 @@
       <table class="table table-bordered table-condensed">
         <tr>
           <th>氏名</th>
-          <th><%#= @custmer.last_name %>
-          </th><%#= @custmer.first_name %>
+          <th><%= @custmer.last_name %>
+          <%= @custmer.first_name %></th>
         </tr>
         <tr>
           <td>カナ</td>
-          <td><%#= @custmer.last_name_kana %>
-          </td><%#= @custmer.first_name_kana %>
+          <td><%= @custmer.last_name_kana %>
+          <%= @custmer.first_name_kana %></td>
         </tr>
         <tr>
           <td>郵便番号</td>
-          <td><%#= @custmer.postal_code %></td>
+          <td><%= @custmer.postal_code %></td>
         </tr>
         <tr>
           <td>住所</td>
-          <td><%#= @custmer.address %></td>
+          <td><%= @custmer.address %></td>
         </tr>
         <tr>
           <td>電話番号</td>
-          <td><%#= @custmer.telephone_number %></td>
+          <td><%= @custmer.telephone_number %></td>
         </tr>
         <tr>
           <td>メールアドレス</td>
@@ -35,9 +35,9 @@
         </tr>
       </table>
       <div class = "col-md-4">
-      <p>配送先<%#= link_to '一覧をみる', addresses_path , class:"btn btn-primary btn-block" %> 
-         注文履歴<%#= link_to '一覧をみる', orders_path , class:"btn btn-primary btn-block" %> 
-      </p>
+      配送先<%#= link_to '一覧をみる', addresses_path , class:"btn btn-primary btn-block" %> 
+      注文履歴<%#= link_to '一覧をみる', orders_path , class:"btn btn-primary btn-block" %> 
+      
       </div>
     </div>    
   </div>
