--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,64 +1,88 @@
 <div class="container">
   <div class="row">
-    <div class="mx-auto">
-      <h2>新規会員登録</h2>
-
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= render "public/shared/error_messages", resource: resource %>
-
-        <div class="field">
-          <%= f.label :名前 %>
-          <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
-          <%= f.text_field :first_name, autocomplete: "first_name" %>
-        </div>
-
-        <div class="field">
-          <%= f.label :フリガナ %>
-          <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana" %>
-          <%= f.text_field :first_name_kana, autocomplete: "last_name_kana" %>
-        </div>
-        
-        <div class="field">
-          <%= f.label :メールアドレス %>
-          <%= f.email_field :email, autocomplete: "email" %>
-        </div>
-
-        <div class="field">
-          <%= f.label :"郵便番号(ハイフンなし)" %>
-          <%= f.text_field :postal_code, autocomplete: "postal_code" %>
-        </div>
-  
-        <div class="field">
-          <%= f.label :住所 %>
-          <%= f.text_field :address, autocomplete: "address" %>
-        </div>
-  
-        <div class="field">
-          <%= f.label :"電話番号(ハイフンなし)" %>
-          <%= f.text_field :telephone_number, autocomplete: "telephone_number" %>
-        </div>
-  
-        <div class="field">
-          <%= f.label :パスワード %>
-          <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %>文字以上)</em>
-          <% end %>
-          <%= f.password_field :password, autocomplete: "new-password" %>
-        </div>
-
-        <div class="field">
-          <%= f.label :"パスワード(確認用)" %>
-          <%= f.password_field :password_confirmation %>
-        </div>
-
-        <div class="actions">
-          <%= f.submit "新規登録", class: "btn btn-success"%>
-        </div>
-      <% end %>
-
-      <h3>既に登録済みの方</h3>
-      <p><%= render "public/shared/links" %> からログインしてください</p>
-      
+    <div class="mx-auto col-11 col-sm-10 col-lg-8">
+      <div class="my-4">
+        <h4 class="col-3 bg-light text-center">新規会員登録</h4>
+      </div>
+      <div class="m-5">
+        <%= form_with model: @customer, url: customer_registration_path, id: 'new_customer', class: 'new_customer', local: true do |f| %>
+          <%= render "public/shared/error_messages", resource: resource %>
+          <table class="table table-borderless">
+            <tr class="field">
+              <th class="w-25"><label>名前</label></th>
+              <th>
+                <%= f.label :last_name, "(姓)" %>
+              </th>
+              <td>
+                <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", class: 'form-control' %>
+              </td>
+              <th>
+                <%= f.label :first_name, "(名)" %>
+              </th>
+              <td>
+                <%= f.text_field :first_name, autocomplete: "first_name", class: 'form-control' %>
+              </td>
+            </tr>
+            <tr class="field">
+              <th><label>フリガナ</label></th>
+              <th>
+                <%= f.label :last_name_kana, "(セイ)" %>
+              </th>
+              <td>
+                <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana", class: 'form-control' %>
+              </td>
+              <th>
+                <%= f.label :first_name_kana, "(メイ)" %>
+              </th>
+              <td>
+                <%= f.text_field :first_name_kana, autocomplete: "last_name_kana", class: 'form-control' %>
+              </td>
+            </tr>
+            <tr class="field">
+              <th><%= f.label :email, "メールアドレス" %></th>
+              <th></th>
+              <td><%= f.email_field :email, autocomplete: "email", class: 'form-control' %></td>
+            </tr>
+            <tr class="field">
+              <th><%= f.label :postal_code, "郵便番号(ハイフンなし)" %></th>
+              <th></th>
+              <td><%= f.text_field :postal_code, autocomplete: "postal_code", class: 'form-control' %></td>
+            </tr>
+            <tr class="field">
+              <th><%= f.label :address, "住所" %></th>
+              <th></th>
+              <td colspan="3"><%= f.text_field :address, autocomplete: "address", class: 'form-control' %></td>
+            </tr>
+            <tr class="field">
+              <th><%= f.label :telephone_number, "電話番号(ハイフンなし)" %></th>
+              <th></th>
+              <td><%= f.text_field :telephone_number, autocomplete: "telephone_number", class: 'form-control' %></td>
+            </tr>
+            <tr class="field">
+              <th>
+                <%= f.label :password, "パスワード" %>
+                <% if @minimum_password_length %>
+                  <em>(<%= @minimum_password_length %>文字以上)</em>
+                <% end %>
+              </th>
+              <th></th>
+              <td><%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %></td>
+            </tr>
+            <tr class="field">
+              <th><%= f.label :password_confirmation, "パスワード(確認用)" %></th>
+              <th></th>
+              <td><%= f.password_field :password_confirmation, class: 'form-control' %></td>
+            </tr>
+          </table>
+          <div class="actions m-4 text-center">
+            <%= f.submit "新規登録", class: "btn btn-success" %>
+          </div>
+        <% end %>
+      </div>
+      <div class="m-4 p-2 text-center">
+        <h6 class="col-3 bg-light text-center">既に登録済みの方</h6>
+        <p><%= render "public/shared/links" %> からログインしてください</p>
+      </div>
     </div>
   </div>
 </div>
