--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
           <%# if ログイン時のみ %>
             <%= link_to "ジャンル一覧", "#", class: "btn btn-outline-dark" %>
             <%= link_to "注文履歴一覧", "#", class: "btn btn-outline-dark" %>
+            <!-- 以下３つ、とりあえずcustomer側のパスを指定しています by taka-->
             <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn btn-outline-dark" %>
           <%# else %>
             <%= link_to "新規登録", new_customer_registration_path, class: "btn btn-outline-dark" %>
