--- a/app/views/items/_index.html.erb
+++ b/app/views/items/_index.html.erb
@@ -7,7 +7,7 @@
           <%= image_tag asset_path("cake_sample.jpg") %>
           <div class="card-body">
             <p class="card-title font-weight-bold"><%= item.name %></p>
-            <p class="card-text"><%= item.price_taxin %></p>
+            <p class="card-text"><%= price_taxin(item.price) %></p>
           </div>
         </div>
       <% end %>
