--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -1,5 +1,7 @@
+<% content_for :title, "注文情報確認" %>
+
 <div class="mx-auto p-3 w-75">
-		<h3 class="bg-light border px-3">注文情報入力</h3>
+		<h3 class="bg-light border px-3 d-inline-block">注文情報確認</h3>
 		<div class="d-flex">
 			<div class="col-9 pe-5">
 				<%= render "order_detail", items: @items %>
