--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -7,7 +7,7 @@
 		<h2><%= @item.name %></h2>
 		<p><%= @item.introduction %></p>
 		<p class="mt-3">
-			<span class="h4"><%= @item.price_taxin %></span>
+			<span class="h4"><%= price_taxin(@item.price) %></span>
 			<span>（税込）</span>
 		</p>
 		<%= form_with model: @cart_item, url: cart_items_path, class: "add_to_cart mt-5 d-flex" do |f| %>
