--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -27,7 +27,7 @@
 			<%= f.radio_button :select_address, 0, checked: (true if @select_address_value == "0") %>
 			<%= f.label :select_address, "ご自身の住所", value: 0 %>
 			<div class="ps-4">
-				<%= f.label :select_address, "〒#{"@customer.postal_code"}　#{"@customer.address"}　#{"@customer.name"}", value: 0 %>
+				<%= f.label :select_address, "〒#{@customer.postal_code}　#{@customer.address}　#{@customer.last_name} #{@customer.first_name}", value: 0 %>
 			</div>
 		</div>
 		<div class="mb-2">
