--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -2,21 +2,21 @@
   <div class="mb-5 mt-5">
     <h3>会員情報編集</h3>
   </div>
-  <%= form_with model: @customer, url: customers_path, method: :patch do |f| %>
+  <%= form_with model: @customer, url: customers_informetion_path, method: :patch do |f| %>
   <table class="table table-sm table-borderless">
     <tr>
-    <td>氏名</td>
-    <td>
-      <%= f.text_field :last_name %>
-      <%= f.text_field :first_name %>
-    </td>
+      <td>氏名</td>
+      <td>
+        <%= f.text_field :last_name %>
+        <%= f.text_field :first_name %>
+      </td>
     </tr>
     <tr>
-    <td>フリガナ</td>
-    <td>
-      <%= f.text_field :last_name_kana %>
-      <%= f.text_field :first_name_kana %>
-    </td>
+      <td>フリガナ</td>
+      <td>
+        <%= f.text_field :last_name_kana %>
+        <%= f.text_field :first_name_kana %>
+      </td>
     </tr>
     <tr>
       <td>郵便番号</td>
