--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -4,7 +4,7 @@
       <h2>マイページ</h2>
       <h3>登録情報</h3>
       <div class = "col-md-2">
-      <%= link_to '編集', customers_edit_path, class:"btn btn-success btn-block" %>
+      <%= link_to '編集', customers_informetion_edit_path, class:"btn btn-success btn-block" %>
       </div>
       <table class="table table-bordered table-condensed">
         <tr>
