--- a/app/views/orders/_order_detail.html.erb
+++ b/app/views/orders/_order_detail.html.erb
@@ -1,10 +1,11 @@
-	<table class="table">
+	<table class="table table-bordered caption-top">
+		<caption>注文内容</caption>
 		<thead>
 			<tr>
-				<th class="text-center">商品名</th>
-				<th class="text-center">単価 (税込)</th>
-				<th class="text-center">数量</th>
-				<th class="text-center">小計</th>
+				<th class="text-center bg-light">商品名</th>
+				<th class="text-center bg-light">単価 (税込)</th>
+				<th class="text-center bg-light">数量</th>
+				<th class="text-center bg-light">小計</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -13,7 +14,7 @@
 					<td class="text-center"><%= item.item.name %></td>
 					<td class="text-end"><%= price_taxin(item.item.price) %></td>
 					<td class="text-center"><%= item.amount %></td>
-					<td class="text-end"><%= price_taxin(item.item.price * item.amount) %></td>
+					<td class="text-end"><%= price((item.item.price * $tax_rate).floor * item.amount) %></td>
 				</tr>
 			<% end %>
 		</tbody>
