Store the controller and view files in the 'Public' folder

--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -36,7 +36,7 @@
 		</table>
 		</div>
 		<div class="col-3 offset-1">
-			<%= render "orders/total_payment" %>
+			<%= render "total_payment" %>
 		</div>
 	</div>
 	<div class="col-8">
