--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "TOP" %>
 <%# サイドバー %>
-<%= render "sidebar" %>
+<%= render "public/homes/sidebar" %>
 <div class="col-9">
   <div id="main_visual" class="d-flex">
     <div id="main_visual_text" class="m-auto border border-dark rounded">
@@ -18,7 +18,7 @@
 
   <div id="new_items" class="p-3">
     <h2>新着商品</h2>
-    <%= render "items/index", items: @items %>
+    <%= render "public/items/index", items: @items %>
     <p class="text-end mt-3">
       <%= link_to "すべての商品を見る", items_path %>
     </p>
