--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,33 +8,36 @@
     </div>
   </div>
   <div class="button_search">
-    <div class="button_area m-2">
+    <div class="button_area m-2 d-flex">
       <% if !admin_signed_in? %>
         <% if customer_signed_in? %>
-          <%= link_to "マイページ", "#", class: "btn btn-outline-dark" %>
+          <div class="d-inline-block my-auto me-2">
+            <p class="fw-bold"><%= "#{current_customer.last_name} #{current_customer.first_name} さん" %> こんにちは</p>
+          </div>
+          <%= link_to "マイページ", "#", class: "btn btn-outline-dark ms-1" %>
         <% elsif !admin_signed_in? && !customer_signed_in? %>
-          <%= link_to "About", about_path, class: "btn btn-outline-dark" %>
+          <%= link_to "About", about_path, class: "btn btn-outline-dark ms-1" %>
         <% end %>
-        <%= link_to "商品一覧", items_path, class: "btn btn-outline-dark" %><%# 顧客用 %>
+        <%= link_to "商品一覧", items_path, class: "btn btn-outline-dark ms-1" %><%# 顧客用 %>
       <% end %>
       <% if admin_signed_in? %>
-        <%= link_to "商品一覧", "#", class: "btn btn-outline-dark" %><%# 管理者用 %>
-        <%= link_to "会員一覧", "#", class: "btn btn-outline-dark" %>
-        <%= link_to "ジャンル一覧", "#", class: "btn btn-outline-dark" %>
-        <%= link_to "注文履歴一覧", "#", class: "btn btn-outline-dark" %>
+        <%= link_to "商品一覧", "#", class: "btn btn-outline-dark ms-1" %><%# 管理者用 %>
+        <%= link_to "会員一覧", "#", class: "btn btn-outline-dark ms-1" %>
+        <%= link_to "ジャンル一覧", "#", class: "btn btn-outline-dark ms-1" %>
+        <%= link_to "注文履歴一覧", "#", class: "btn btn-outline-dark ms-1" %>
         <!-- 以下３つ、とりあえずcustomer側のパスを指定しています by taka-->
       <% elsif customer_signed_in? %>
-        <%= link_to "カート", "#", class: "btn btn-outline-dark" %>
+        <%= link_to "カート", "#", class: "btn btn-outline-dark ms-1" %>
       <% else %>
-        <%= link_to "新規登録", new_customer_registration_path, class: "btn btn-outline-dark" %>
-        <%= link_to "ログイン", new_customer_session_path, class: "btn btn-outline-dark" %>
+        <%= link_to "新規登録", new_customer_registration_path, class: "btn btn-outline-dark ms-1" %>
+        <%= link_to "ログイン", new_customer_session_path, class: "btn btn-outline-dark ms-1" %>
       <% end %>
       <% if admin_signed_in? || customer_signed_in? %>
-        <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn btn-outline-dark" %>
+        <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn btn-outline-dark ms-1" %>
       <% end %>
     </div>
     <div class="search_area m-2">
-      <%= form_with class: "input-group w-50 ms-auto", method: :get do |f| %>
+      <%= form_with class: "input-group ms-auto", method: :get do |f| %>
         <%= f.text_field :search, class: "form-control rounded-start", placeholder: "検索" %>
         <div class="input-group-append">
           <%= f.button :type => "submit", name: nil, class: " btn btn-outline-secondary rounded-0 rounded-end " do %>
