--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -35,7 +35,7 @@
         </tr>
       </table>
       <div class = "col-md-4">
-      配送先<%= link_to '一覧をみる', addresses_path , class:"btn btn-primary btn-block" %>
+      配送先<%= link_to '一覧をみる', addresses_path , class:"btn btn-primary btn-block" %><br>
       注文履歴<%#= link_to '一覧をみる', orders_path , class:"btn btn-primary btn-block" %>
 
       </div>
