[Add]ActiveStorage, 管理者商品新規追加機能

--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -22,6 +22,7 @@
               <td><%= order.status %></td>
             </tr>
           <% end %>
+          <%= paginate orders_ %>
         </tbody>
       </table>
     </div>
