--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -3,7 +3,7 @@
   <% if @item.errors.any? %>
     <div id="error_explanation">
       <h3>
-        <%= @item.errors.count %> errors prohibited this obj from being saved:
+        <%= @item.errors.count %> 件のエラーがあります。
       </h3>
       <ul>
         <% @item.errors.full_messages.each do |message| %>
