管理者genre controller view model

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "TOP" %>
 <%# サイドバー %>
-<%= render "public/homes/sidebar" %>
+<%= render "public/homes/sidebar",genres: @genres %>
 <div class="col-9">
   <div id="main_visual" class="d-flex">
     <div id="main_visual_text" class="m-auto border border-dark rounded">
