Complete Customer-management

--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,12 +1,15 @@
 <div class="mx-auto py-3 px-5 w-100">
 	<h3 class="bg-light border px-3 mb-3 d-inline-block">会員一覧</h3>
 	<table class="table table-bordered">
+		<colgroup>
+			
+		</colgroup>
 		<thead>
-			<tr>
-				<th class="text-center bg-light">会員ID</th>
-				<th class="text-center bg-light">氏名</th>
-				<th class="text-center bg-light">メールアドレス</th>
-				<th class="text-center bg-light">ステータス</th>
+			<tr class="text-center bg-light">
+				<th>会員ID</th>
+				<th>氏名</th>
+				<th>メールアドレス</th>
+				<th>ステータス</th>
 			</tr>
 		</thead>
 		<tbody>
