--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,4 +1,4 @@
-<div class="mx-auto py-3 px-5 w-100">
+<div class="mx-auto p-3 w-75">
 	<h3 class="bg-light border px-3 mb-3 d-inline-block"><%= "#{@customer.last_name} #{@customer.first_name} " %>さんの会員詳細</h3>
 	<table>
 		<tbody>
