--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -2,8 +2,7 @@
 
 <div class="mx-auto p-3 w-75">
 	<div class="align-items-center d-flex mb-3">
-		<h3 class="bg-light border px-3 m-0 d-inline-block">
-			注文情報入力</h3>
+		<h3 class="bg-light border px-3 m-0 d-inline-block">注文情報入力</h3>
 		<% if @vaildate %>
 			<h5 class="mx-2 my-0 p-1 d-inline-block text-danger">入力に誤りがあります</h5>
 		<% end %>
