--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,7 +1,5 @@
-<div class="container">
-  <div class="mb-5 mt-5">
-    <h3>会員情報編集</h3>
-  </div>
+<div class="mx-auto p-3 w-75">
+  <h3 class="bg-light border px-3 m-0 d-inline-block">会員情報編集</h3>
   <%= form_with model: @customer, url: admin_customer_path(@customer.id), method: :patch do |f| %>
   <table class="table table-sm table-borderless">
     <tbody class="align-middle">
