--- a/app/views/public/items/_index.html.erb
+++ b/app/views/public/items/_index.html.erb
@@ -3,8 +3,7 @@
     <div>
       <%= link_to item_path(item.id), class: "text-decoration-none text-dark" do %>
         <div class="card item_box">
-          <%#= image_tag item.get_item_image(100,100), size: "100x100" %>
-          <%= image_tag asset_path("cake_sample.jpg") %>
+          <%= image_tag item.get_item_image, height: "200" %>
           <div class="card-body">
             <p class="card-title font-weight-bold"><%= item.name %></p>
             <p class="card-text"><%= price_taxin(item.price) %></p>
