--- a/app/views/public/homes/_sidebar.html.erb
+++ b/app/views/public/homes/_sidebar.html.erb
@@ -8,7 +8,7 @@
     <tbody>
       <% @genres.each do |genre| %>
         <tr>
-          <td><%= link_to genre.name  %></td>
+          <td><%= link_to genre.name, genre_path(genre.id)  %></td>
         </tr>
       <% end %>
     </tbody>
