[Add]管理者トップページ　　編集中

--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -22,7 +22,7 @@
               <td><%= order.status %></td>
             </tr>
           <% end %>
-          <%= paginate orders_ %>
+          <%= paginate @orders %>
         </tbody>
       </table>
     </div>
