--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,1 +1,32 @@
-admin/item#index
+<div class="container">
+  <div class="row">
+    <div class="mx-auto col-11 col-sm-10">
+      <div class="my-4">
+        <h4 class="col-3 bg-light text-center">商品一覧</h4>
+      </div>
+      <table class="col-12">
+        <thead>
+          <tr class="bg-light">
+            <th>商品ID</th>
+            <th>商品名</th>
+            <th>税抜価格</th>
+            <th>ジャンル</th>
+            <th>ステータス</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @items.each do |item| %>
+            <tr>
+              <td><%= item.id %></td>
+              <td><%= link_to item.name, admin_item_path(item), class: "link-dark" %></td>
+              <td><%= price(item.price) %></td>
+              <td><%= item.genre_id %></td><%#= item.genre_id.name %>
+              <td class="text-success fs-5"><%= item.is_active ? '販売中' : '販売停止中' %></td>
+            </tr>
+          <% end %>
+          <%= paginate @items %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
