[Fix]販売ステータス変更時カラーが変らない件を修正、ジャンル選択時数字が表示される件を修正

--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -34,8 +34,7 @@
             </tr>
             <tr class="form-group align-middle">
               <th><%= f.label :genre_id, "ジャンル" %></th>
-                                        <!--要編集-->
-              <td><%= f.select :genre_id, [['ケーキ',1],['プリン',2],['焼き菓子',3],['キャンディ',4]], {include_blank: '--選択してください--'}, {class: 'form-select'} %></td>
+              <td><%= f.select :genre_id, @genres.map{ |genre| [genre.name, genre.id]}, {include_blank: '--選択してください--'}, {class: 'form-select'} %></td>
             </tr>
             <tr class="form-group align-middle">
               <th><%= f.label :price, "税抜価格" %></th>
