--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -2,24 +2,27 @@
   <div class="row">
     <div class="mx-auto col-11 col-sm-10">
       <div class="my-4">
-        <h4 class="col-3 bg-light text-center">注文履歴一覧</h4>
+        <h4 class="col-2 bg-light text-center">注文履歴一覧</h4>
       </div>
-      <table class="col-12">
+      <table class="table col-12">
         <thead>
           <tr class="bg-light">
-            <th class="col-3">購入日時</th>
-            <th class="col-3">購入者</th>
-            <th class="col-3">注文個数</th>
-            <th class="col-3">注文ステータス</th>
+            <th>購入日時</th>
+            <th>購入者</th>
+            <th>注文個数</th>
+            <th>注文ステータス</th>
           </tr>
         </thead>
         <tbody>
           <% @orders.each do |order| %>
             <tr>
-              <td><%= order.created_at %></td>
-              <td><%= order.customer.name %></td>
+              <td><%= link_to order.created_at.strftime('%Y/%m/%d %H:%M:%S'), "#", class: "link-dark" %></td>
+              <td>
+                <%= order.customer.last_name %>
+                <%= order.customer.first_name %>
+              </td>
               <td><%= order.order_details.sum(:amount) %></td>
-              <td><%= order.status %></td>
+              <td><%= order.status_i18n %></td>
             </tr>
           <% end %>
           <%= paginate @orders %>
