[Fix]管理者商品詳細ページ　genre名　修正

--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -22,7 +22,7 @@
         </tr>
         <tr>
           <th>ジャンル</th>
-          <td><%= @item.genre_id %></td><%#= @item.genre_id.name %>
+          <td><%= @item.genre.name %></td>
         </tr>
         <tr class="align-middle">
           <th>税込価格<br>(税抜価格)</th>
