--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -44,10 +44,10 @@
 			<tr>
 				<td colspan=2 class="py-3">
 					<div class="d-flex">
-						<div class="mx-auto">
+						<div class="mx-3">
 							<%= link_to "編集する", edit_admin_customer_path, class: "btn btn-success" %>
 						</div>
-						<div class="mx-auto">
+						<div class="mx-3">
 							<%= link_to "注文履歴一覧を見る", admin_root_path(customer_id: params[:id]), class: "btn btn-primary" %><%# admin_homes_path(customer_id: params[:id]) %>
 						</div>
 					</div>
