--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -36,7 +36,7 @@
       <% end %>
     </div>
     <div class="search_area m-2">
-      <%= form_with class: "input-group ms-auto", method: :get do |f| %>
+      <%= form_with url: search_path, class: "input-group ms-auto", method: :get do |f| %>
         <%= f.text_field :search, class: "form-control rounded-start", placeholder: "検索" %>
         <div class="input-group-append">
           <%= f.button :type => "submit", name: nil, class: " btn btn-outline-secondary rounded-0 rounded-end " do %>
