--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -27,9 +27,9 @@
         <%= f.submit "変更",  class: "btn btn-success" %>
         <% end %>
         </td>
-        <td>￥<%= cart_item.subtotal%></td>
+        <td><%= price(cart_item.subtotal) %></td>
         <td><%= link_to '削除する', cart_item_path(cart_item.id), class: "btn btn-danger", method: :delete %></td>
-        <% @total +=  cart_item.subtotal %>
+        <% @total += cart_item.subtotal %>
       </tr>
       <% end %>
     </table>
@@ -42,13 +42,13 @@
     <table class="table table-bordered ">
       <tr>
         <td>合計金額</td>
-        <td>￥<%= @total %></td>
+        <td><%= price(@total) %></td>
       </tr>
     </table>
   </div>
   <div class='row'>
     <div class="col-3 mx-auto pb-3">
-      <%= link_to '情報入力に進む',new_order_path, class: "btn btn-success btn-lg" %>
+      <%= link_to '情報入力に進む', new_order_path, class: "btn btn-success btn-lg" %>
     </div>
   </div>
   <% else %>
