--- a/app/views/public/homes/_sidebar.html.erb
+++ b/app/views/public/homes/_sidebar.html.erb
@@ -6,7 +6,7 @@
       </tr>
     </thead>
     <tbody>
-      <% @genres.each do |genre| %>
+      <% Genre.all.each do |genre| %>
         <tr>
           <td><%= link_to genre.name, genre_path(genre.id) %></td>
         </tr>
