--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "注文履歴一覧" %>
 <div class="mx-auto p-3">
 	<h3 class="bg-light border px-3 mb-3 d-inline-block">注文履歴一覧</h3>
 	<table class="table w-100 table-bordered">
