--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "注文詳細" %>
 <div class="mx-auto py-3 px-5 w-100">
 	<h3 class="bg-light border px-3 mb-3 d-inline-block">注文履歴詳細</h3>
 	<div class="d-flex">
