--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -48,7 +48,8 @@
             <td> 注文履歴</td>
             <td><%= link_to '一覧をみる', orders_path , class:"btn btn-primary btn-block" %></td>
           </tr>
-        </table>      </div>
+        </table>
+      </div>
     </div>
   </div>
 </div>
