--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -4,7 +4,7 @@
     <div class='col-md-7'>
       <h2>マイページ</h2>
       <div class = "col-md-4">
-        <table class="table table-sm table-borderless">
+        <table class="table table-sm table-borderless text-nowrap">
           <tr>
             <td><h3>登録情報</h3></td>
             <td><%= link_to '編集する', customers_informetion_edit_path, class:"btn btn-success btn-block" %></td>
