--- a/app/views/public/orders/_order_detail.html.erb
+++ b/app/views/public/orders/_order_detail.html.erb
@@ -1,4 +1,4 @@
-	<table class="table table-bordered caption-top align-middle">
+	<table class="table table-bordered caption-top align-middle text-nowrap">
 		<caption>注文内容</caption>
 		<thead>
 			<tr>
