--- a/app/views/admin/orders/edit.html.erb
+++ b/app/views/admin/orders/edit.html.erb
@@ -1,19 +1,21 @@
 <% content_for :title, "注文履歴詳細" %>
 <div class="mx-auto p-3 w-75">
-  <h3 class="bg-light border px-3 m-0 d-inline-block">注文履歴詳細</h3>
+	<div class="align-items-center d-flex mb-3">
+    <h3 class="bg-light border px-3 m-0 d-inline-block">注文履歴詳細</h3>
+  </div>
   <table class="text-nowrap">
     <tbody>
       <tr class="p-3">
       <th class="p-3">購入者</th>
-        <td class="p-3"><%= link_to "#{@customer.last_name} #{@customer.first_name}", admin_customer_path(@customer.id) %>
+        <td class="p-3" colspan="2"><%= link_to "#{@customer.last_name} #{@customer.first_name}", admin_customer_path(@customer.id) %>
       </tr>
       <tr>
         <th class="p-3">注文日</th>
-        <td class="p-3"><%= @order.created_at.localtime("+09:00").strftime("%Y年%-m月%-d日")  %></td>
+        <td class="p-3" colspan="2"><%= @order.created_at.localtime("+09:00").strftime("%Y年%-m月%-d日")  %></td>
       </tr>
       <tr>
       <th class="p-3">配送先</th>
-        <td class="p-3">
+        <td class="p-3" colspan="2">
           <%= "〒#{@order.postal_code}　#{@order.address}" %>
           <br>
           <%= @order.name %>
@@ -21,12 +23,15 @@
       </tr>
       <tr>
         <th class="p-3">支払方法</th>
-        <td class="p-3"><%= @order.payment_method_i18n %></td>
+        <td class="p-3" colspan="2"><%= @order.payment_method_i18n %></td>
       </tr>
       <tr>
         <th class="p-3">注文ステータス</th>
         <td class="p-3 order_statuses_selector">
           <%= render "order_statuses_selector" %>
+        </td>
+        <td>
+          <h5 class="success_message mx-2 my-0 p-1 d-inline-block text-success" style="visibility: hidden; opacity: 0;">ステータスを更新しました</h5>
         </td>
       </tr>
     </tbody>
