[Fix]deviseログイン　フラッシュメッセージを見えないように表示

--- a/app/views/public/homes/_sidebar.html.erb
+++ b/app/views/public/homes/_sidebar.html.erb
@@ -1,4 +1,5 @@
 <div class="sidebar col-3 bg-warning p-5">
+  <p class="opacity-0"><%= flash[:notice] %></p>
   <table class="text-center mx-auto border border-dark">
     <thead class="border border-dark">
      <tr>
