--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -3,7 +3,9 @@
     <div class="mx-auto col-11 col-sm-10 col-lg-8">
       <div class="my-4">
         <h4 class="col-3 bg-light text-center">新規会員登録</h4>
-        <%= render "public/shared/error_messages", resource: resource %>
+        <div class="text-danger">
+          <%= render "public/shared/error_messages", resource: resource %>
+        </div>
       </div>
       <div class="m-5">
         <%= form_with model: @customer, url: customer_registration_path, id: 'new_customer', class: 'new_customer', local: true do |f| %>
